<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="please_login">Welcome to pocketSteam, please login with your Steam account details below</string>
    <string name="app_name">pocketSteam</string>
    <string name="loginButton">Login To Steam</string>
    <string name="userNameText">Username</string>
    <string name="passWordText">Password</string>
    <string name="RememberMe">Remember My Password</string>
    <string name="SecureConnection">Your Steam Account credentials will be sent over a secure SSL connection</string>
    <string name="Connecting">Connecting to pocketSteam</string>
    <string name="InvalidDetails">Invalid username/password provided</string>
    <string name="CannotConnect">There was an error while connecting to pocketSteam</string>
    <string name="NoFriends">You currently have no Steam friends to display</string>
    <string name="FriendsButton">Friends</string>
    <string name="SettingsButton">Settings</string>
    <string name="PleaseWait">Please wait</string>
    <string name="GettingData">Retrieving data from the server</string>
    <string name="ConnectionExpired">Your connection has expired, please check  your network connectivity and login again</string>
    <string name="SteamGuard">SteamGuard</string>
    <string name="SteamGuardPleaseEnter">Please enter your Steam Guard key sent that was sent to your email account</string>
    <string name="DisconnectButton">Disconnect</string>
    <string name="SendMessage">Send</string>
    <string name="ChatLogsButton">Chat Logs</string>
    <string name="UpdateAvailable">Your pocketSteam App is out of date, please update it using the Android Market</string>
</resources>
